namespace ATM.UI;

public class Screen { 
    public void DisplayMessage(string message) => Console.WriteLine($"[SCREEN] > {message}"); 
}